<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-20dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        android:id="@+id/main_image"
        android:src="@drawable/ic_day" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/image_height"
        android:background="@drawable/bg_layout">

        <FrameLayout
            android:id="@+id/city_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:background="@drawable/bg_location_layout"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/date_textView"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="6dp"
                android:contentDescription="@string/location"
                android:src="@drawable/ic_location" />

            <TextView
                android:id="@+id/location_textView"
                style="@style/location_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </FrameLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/date_textView"
            style="@style/date_text_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            app:layout_constraintEnd_toStartOf="@id/city_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/city_layout">

            <LinearLayout
                android:id="@+id/linear1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/linear2"
                app:layout_constraintTop_toTopOf="parent">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/weather_imageView"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignStart="@id/weather_textView"
                        android:layout_alignEnd="@id/weather_textView"
                        android:layout_alignParentTop="true"
                        android:contentDescription="@string/currentWeather"
                        android:src="@drawable/ic_sun_cloud" />

                    <TextView
                        android:id="@+id/weather_textView"
                        style="@style/weather_text_style"
                        android:layout_below="@id/weather_imageView"
                        android:text="@string/sunny" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/deg_textView"
                        style="@style/deg_style"
                        android:layout_marginBottom="8dp" />

                    <TextView
                        style="@style/deg_text_style"
                        android:text="@string/deg_c" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/deg_up_textView"
                        style="@style/deg_change_text_style" />

                    <TextView
                        style="@style/deg_change_text_style"
                        android:layout_toEndOf="@id/deg_up_textView"
                        android:text="@string/deg_up" />

                    <TextView
                        android:id="@+id/deg_down_textView"
                        style="@style/deg_change_text_style"
                        android:layout_below="@+id/deg_up_textView" />

                    <TextView
                        style="@style/deg_change_text_style"
                        android:layout_below="@id/deg_up_textView"
                        android:layout_toEndOf="@id/deg_down_textView"
                        android:text="@string/deg_down" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@id/linear3"
                app:layout_constraintTop_toBottomOf="@id/linear1">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/humidity"
                        android:src="@drawable/ic_humedity" />

                    <TextView
                        android:id="@+id/humidity_textView"
                        style="@style/title_text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/percentage" />

                    <TextView
                        style="@style/sub_title_text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/humidity" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/pressure"
                        android:src="@drawable/ic_pressure" />

                    <TextView
                        android:id="@+id/pressure_textView"
                        style="@style/title_text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/mbar" />

                    <TextView
                        style="@style/sub_title_text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pressure" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/ic_wind" />

                    <TextView
                        android:id="@+id/wind_textView"
                        style="@style/title_text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/m_s" />

                    <TextView
                        style="@style/sub_title_text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wind" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linear2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/sunrise"
                        android:src="@drawable/ic_sunset" />

                    <TextView
                        android:id="@+id/sunrise_textView"
                        style="@style/title_text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp" />

                    <TextView
                        style="@style/sub_title_text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunrise" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/sunset"
                        android:src="@drawable/ic_sunrise" />

                    <TextView
                        android:id="@+id/sunset_textView"
                        style="@style/title_text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp" />

                    <TextView
                        style="@style/sub_title_text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunset" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/daytime"
                        android:src="@drawable/ic_day_time" />

                    <TextView
                        android:id="@+id/day_time_textView"
                        style="@style/title_text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp" />

                    <TextView
                        style="@style/sub_title_text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/daytime" />
                </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>